Fixing overflow

--- a/components/dashboard/compensation-reminder.module.css
+++ b/components/dashboard/compensation-reminder.module.css
@@ -12,7 +12,7 @@
   width: 100%;
   height: auto;
 
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .compensation-tag {
@@ -20,7 +20,6 @@
   width: 100%;
   height: 40px;
   margin-bottom: 5px;
-
 
   display: flex;
   align-items: center;
