--- a/components/dashboard/event-list.module.css
+++ b/components/dashboard/event-list.module.css
@@ -1,5 +1,5 @@
 .list {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .list::-webkit-scrollbar {
