--- a/components/events/add-event.module.css
+++ b/components/events/add-event.module.css
@@ -10,7 +10,6 @@
   height: 100%;
   padding: 50px 0;
 
-
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -25,7 +24,6 @@
   width: 100%;
   padding: 5px;
 
-
   background-color: transparent;
   color: var(--secondary-color);
   font-size: 1rem;
@@ -38,7 +36,7 @@
   width: 30%;
   border: 1px solid var(--secondary-color);
 
-  overflow: scroll;
+  overflow: auto;
 }
 
 .panel-1,
@@ -90,7 +88,6 @@
   width: calc(100% - 30px);
   padding: 5px;
 
-
   display: flex;
   align-self: center;
 }
@@ -103,7 +100,6 @@
 
 .remove-btn {
   width: 30px;
-
 
   background-color: var(--secondary-color);
   color: var(--primary-color);
@@ -181,7 +177,7 @@
 @media screen and (max-width: 992px) {
   .title-card {
     height: auto;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .form {
@@ -189,7 +185,7 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .card {
