--- a/components/events/event-details/compensation-details.module.css
+++ b/components/events/event-details/compensation-details.module.css
@@ -23,7 +23,7 @@
 }
 
 .participant-list {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .participant-tag {
