--- a/components/events/event-details/event-details.module.css
+++ b/components/events/event-details/event-details.module.css
@@ -9,7 +9,7 @@
   /* max-height: 120px; */
   background-color: transparent;
   border: 1px solid var(--secondary-color);
-  overflow: scroll;
+  overflow: auto;
 }
 
 .title-card > p {
