--- a/components/ui/modal.module.css
+++ b/components/ui/modal.module.css
@@ -27,7 +27,7 @@
   transform-origin: 50% 50%;
 
   z-index: 101;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .modal::-webkit-scrollbar {
