--- a/pages/compensation.module.css
+++ b/pages/compensation.module.css
@@ -106,7 +106,7 @@
 
   grid-row: 3/4;
   grid-column: 4/5;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .clock-color {
