--- a/pages/events/index.module.css
+++ b/pages/events/index.module.css
@@ -32,7 +32,7 @@
 
   grid-row: 2/3;
   grid-column: 3/4;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .clock-color {
